--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,10 @@
   align-items: center;
   background-color: #f2f2f2;
   height: 60px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .footer a {
@@ -68,6 +72,7 @@
 .footer a:hover {
   color: #007bff;
 }
+
 
 /* Signup.css */
 
@@ -150,8 +155,15 @@ button {
   color: #fff;
   border: none;
   cursor: pointer;
+  
+    z-index: 1;
+  
+  
 }
 
 button:hover {
   background-color: #0056b3;
+}
+main {
+  margin-bottom: 60px; 
 }
